--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <a class="item" href="https://example.com/7">심해어</a>
     <a class="item" href="https://example.com/8">읺읺</a>
     <a class="item" href="https://example.com/9">재혁</a>
-    <a class="item" href="https://example.com/10">지나가는사람</a>
+    <a class="item" href="https://docs.google.com/spreadsheets/d/1_-BbQrFHbbI_J-uYkLkhzmWNBWRJcgxnKr7VIzQ0SoI/edit?gid=0#gid=0">지나가는사람</a>
     <a class="item" href="https://example.com/11">케로/미송</a>
     <a class="item" href="https://example.com/12">moro</a>
     <a class="item" href="https://example.com/13">Nyxx</a>
@@ -59,3 +59,4 @@
 </body>
 update index
 </html>
+
