--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <a class="item" href="https://docs.google.com/document/d/1vfm3Nh2fak_7ZAcFrwpVoHKEE4YlTB_fdTnw_M23r4c/edit?tab=t.0">라퓨</a>
     <a class="item" href="https://docs.google.com/spreadsheets/d/18MFZDSdoScIa5KRU5e-WCy8gsyYV8p624BX8ogdXrts/edit?gid=542956617#gid=542956617">룩샤</a>
     <a class="item" href="https://example.com/4">근성객기</a>
-    <a class="item" href="https://example.com/5">두기</a>
+    <a class="item" href="https://docs.google.com/spreadsheets/d/1Jh0SQIlrUlNSFR1EOEUiDmB_R665bWObKpLTD0GVeHk/edit?usp=sharing">두기</a>
     <a class="item" href="https://example.com/6">로드</a>
     <a class="item" href="https://example.com/7">심해어</a>
     <a class="item" href="https://example.com/8">읺읺</a>
@@ -59,4 +59,5 @@
 </body>
 update index
 </html>
+
 
