--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <a class="item" href="https://docs.google.com/spreadsheets/d/18MFZDSdoScIa5KRU5e-WCy8gsyYV8p624BX8ogdXrts/edit?gid=542956617#gid=542956617">룩샤</a>
     <a class="item" href="https://example.com/4">근성객기</a>
     <a class="item" href="https://docs.google.com/spreadsheets/d/1Jh0SQIlrUlNSFR1EOEUiDmB_R665bWObKpLTD0GVeHk/edit?usp=sharing">두기</a>
-    <a class="item" href="https://example.com/6">로드</a>
+    <a class="item" href="https://docs.google.com/spreadsheets/d/14z30_sKocNk7GkjTg_vjGObRFonas1s3rbZILe0C-58/edit?usp=sharing">로드</a>
     <a class="item" href="https://example.com/7">심해어</a>
     <a class="item" href="https://example.com/8">읺읺</a>
     <a class="item" href="https://example.com/9">재혁</a>
@@ -59,5 +59,6 @@
 </body>
 update index
 </html>
+
 
 
