--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <a class="item" href="https://docs.google.com/spreadsheets/d/1w9egpFsL-ZzSoVW-wBif-bGbCVlC31naWHf6y2PDA3k/edit?gid=1280759504#gid=1280759504">bless</a>
     <a class="item" href="https://docs.google.com/document/d/1vfm3Nh2fak_7ZAcFrwpVoHKEE4YlTB_fdTnw_M23r4c/edit?tab=t.0">라퓨</a>
     <a class="item" href="https://docs.google.com/spreadsheets/d/18MFZDSdoScIa5KRU5e-WCy8gsyYV8p624BX8ogdXrts/edit?gid=542956617#gid=542956617">룩샤</a>
-    <a class="item" href="https://example.com/4">근성객기</a>
+    <a class="item" href="https://docs.google.com/spreadsheets/d/1V_feDMJtKweKwOAqQ2szfMAevOgDpDjO4YXKmw7Y1jc/edit?gid=461907442#gid=461907442">근성객기</a>
     <a class="item" href="https://docs.google.com/spreadsheets/d/1Jh0SQIlrUlNSFR1EOEUiDmB_R665bWObKpLTD0GVeHk/edit?usp=sharing">두기</a>
     <a class="item" href="https://docs.google.com/spreadsheets/d/14z30_sKocNk7GkjTg_vjGObRFonas1s3rbZILe0C-58/edit?usp=sharing">로드</a>
     <a class="item" href="https://example.com/7">심해어</a>
@@ -59,6 +59,7 @@
 </body>
 update index
 </html>
+
 
 
 
