--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <a class="item" href="https://example.com/8">읺읺</a>
     <a class="item" href="https://example.com/9">재혁</a>
     <a class="item" href="https://docs.google.com/spreadsheets/d/1_-BbQrFHbbI_J-uYkLkhzmWNBWRJcgxnKr7VIzQ0SoI/edit?gid=0#gid=0">지나가는사람</a>
-    <a class="item" href="https://example.com/11">케로/미송</a>
+    <a class="item" href="https://docs.google.com/spreadsheets/d/1L3NTexknm6yFR2xGDiCxupe8qCdeNBjL2_sMsCplOR8/edit?usp=drivesdk">케로/미송</a>
     <a class="item" href="https://example.com/12">moro</a>
     <a class="item" href="https://example.com/13">Nyxx</a>
     <a class="item" href="https://example.com/14">끼롱곰</a>
@@ -59,6 +59,7 @@
 </body>
 update index
 </html>
+
 
 
 
