--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
     <a class="item" href="https://docs.google.com/spreadsheets/d/1L3NTexknm6yFR2xGDiCxupe8qCdeNBjL2_sMsCplOR8/edit?usp=drivesdk">케로/미송</a>
     <a class="item" href="https://docs.google.com/spreadsheets/d/1Ek-iU7lyOjE8hFVlx1NMPJFjTMoXw2OOBp--39UtcE4/edit?gid=1186439431#gid=1186439431">moro</a>
     <a class="item" href="https://example.com/13">Nyxx</a>
-    <a class="item" href="https://example.com/14">끼롱곰</a>
+    <a class="item" href="https://docs.google.com/spreadsheets/d/1AyFcoLn800EVrNnFN3HP7QD5VYPYETJeLP3g6BQRCFk/edit?usp=sharing">끼롱곰</a>
   </div>
 </body>
 update index
 </html>
+
 
 
 
