Update index.html db

--- a/index.html
+++ b/index.html
@@ -59,7 +59,18 @@
 </body>
 update index
 </html>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
+<script>
+const firebaseConfig = {
+  apiKey: "AIzaSyAXLrGMg60B_RB06jQFqwAX3_opHnBhUP8",
+  authDomain: "trpg-keyword-2026.firebaseapp.com",
+  projectId: "trpg-keyword-2026",
+};
 
+firebase.initializeApp(firebaseConfig);
+const db = firebase.firestore();
+</script>
 
 
 
