Update index.html db db

--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
     <a class="item" href="https://example.com/13">Nyxx</a>
     <a class="item" href="https://docs.google.com/spreadsheets/d/1AyFcoLn800EVrNnFN3HP7QD5VYPYETJeLP3g6BQRCFk/edit?usp=sharing">끼롱곰</a>
   </div>
-</body>
-update index
-</html>
+  
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
 <script>
@@ -66,11 +64,19 @@ const firebaseConfig = {
   apiKey: "AIzaSyAXLrGMg60B_RB06jQFqwAX3_opHnBhUP8",
   authDomain: "trpg-keyword-2026.firebaseapp.com",
   projectId: "trpg-keyword-2026",
+      storageBucket: "trpg-keyword-2026.firebasestorage.app",
+    messagingSenderId: "159506261526",
+    appId: "1:159506261526:web:4bbd67d8b7a9fb969e7737"
 };
 
 firebase.initializeApp(firebaseConfig);
 const db = firebase.firestore();
 </script>
+</body>
+update index
+</html>
+
+
 
 
 
