--- a/index.html
+++ b/index.html
@@ -57,24 +57,28 @@
     <a class="item" href="https://docs.google.com/spreadsheets/d/1AyFcoLn800EVrNnFN3HP7QD5VYPYETJeLP3g6BQRCFk/edit?usp=sharing">끼롱곰</a>
   </div>
   
-<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
-<script>
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+import { getFirestore } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+
 const firebaseConfig = {
   apiKey: "AIzaSyAXLrGMg60B_RB06jQFqwAX3_opHnBhUP8",
   authDomain: "trpg-keyword-2026.firebaseapp.com",
   projectId: "trpg-keyword-2026",
-      storageBucket: "trpg-keyword-2026.firebasestorage.app",
-    messagingSenderId: "159506261526",
-    appId: "1:159506261526:web:4bbd67d8b7a9fb969e7737"
+  storageBucket: "trpg-keyword-2026.appspot.com",
+  messagingSenderId: "159506261526",
+  appId: "1:159506261526:web:4bbd67d8b7a9fb969e7737"
 };
 
-firebase.initializeApp(firebaseConfig);
-const db = firebase.firestore();
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
+
+window.db = db; // 다른 script에서 쓰기 위해
 </script>
 </body>
 update index
 </html>
+
 
 
 
