--- a/test.html
+++ b/test.html
@@ -55,13 +55,41 @@ async function saveKeyword() {
   const author = document.getElementById("author").value;
   const target = document.getElementById("target").value;
   const keyword = document.getElementById("keyword").value.trim();
+  const msg = document.getElementById("msg");
+
+  msg.innerText = "";
 
   if (!keyword) {
-    document.getElementById("msg").innerText = "키워드를 입력하세요";
+    msg.innerText = "키워드를 입력하세요";
     return;
   }
 
   try {
+    // 1️⃣ 해당 대상에게 이미 있는 키워드인지 검사
+    const sameTarget = await db.collection("keywords")
+      .where("target", "==", target)
+      .where("keyword", "==", keyword)
+      .get();
+
+    if (!sameTarget.empty) {
+      msg.innerText = "이미 접수된 키워드입니다";
+      msg.style.color = "red";
+      return;
+    }
+
+    // 2️⃣ 같은 작성자가 다른 대상에게 같은 키워드 썼는지 검사
+    const sameAuthor = await db.collection("keywords")
+      .where("author", "==", author)
+      .where("keyword", "==", keyword)
+      .get();
+
+    if (!sameAuthor.empty) {
+      msg.innerText = "중복 키워드 제출이 불가능합니다";
+      msg.style.color = "red";
+      return;
+    }
+
+    // 3️⃣ 저장
     await db.collection("keywords").add({
       author: author,
       target: target,
@@ -69,9 +97,13 @@ async function saveKeyword() {
       createdAt: new Date()
     });
 
-    document.getElementById("msg").innerText = "저장 성공";
+    msg.innerText = "저장되었습니다";
+    msg.style.color = "green";
+    document.getElementById("keyword").value = "";
+
   } catch (e) {
-    document.getElementById("msg").innerText = "에러: " + e.message;
+    msg.innerText = "에러: " + e.message;
+    msg.style.color = "red";
   }
 }
 </script>
