--- a/test.html
+++ b/test.html
@@ -35,6 +35,8 @@
 
 <p id="msg"></p>
 
+  <h3>저장된 키워드</h3>
+<ul id="list"></ul>
 
 <!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
