--- a/index.html
+++ b/index.html
@@ -41,20 +41,20 @@
 
 <body>
   <div class="container">
-    <a class="item" href="https://docs.google.com/spreadsheets/d/1w9egpFsL-ZzSoVW-wBif-bGbCVlC31naWHf6y2PDA3k/edit?gid=1280759504#gid=1280759504">bless</a>
-    <a class="item" href="https://docs.google.com/spreadsheets/d/1qgynnvIv3kyE5hr0zkeBaKbO4W-xzacvjvkMab2zr0Q/edit?usp=sharing">라퓨</a>
-    <a class="item" href="https://docs.google.com/spreadsheets/d/18MFZDSdoScIa5KRU5e-WCy8gsyYV8p624BX8ogdXrts/edit?gid=542956617#gid=542956617">룩샤</a>
-    <a class="item" href="https://docs.google.com/spreadsheets/d/1V_feDMJtKweKwOAqQ2szfMAevOgDpDjO4YXKmw7Y1jc/edit?gid=461907442#gid=461907442">근성객기</a>
-    <a class="item" href="https://docs.google.com/spreadsheets/d/1Jh0SQIlrUlNSFR1EOEUiDmB_R665bWObKpLTD0GVeHk/edit?usp=sharing">두기</a>
-    <a class="item" href="https://docs.google.com/spreadsheets/d/14z30_sKocNk7GkjTg_vjGObRFonas1s3rbZILe0C-58/edit?usp=sharing">로드</a>
-    <a class="item" href="https://docs.google.com/spreadsheets/d/1WP5Y9ufFeLeMDehVD9fLQ68cmueraWkYq8Wqg9OGPq0/edit?usp=sharing">심해어</a>
-    <a class="item" href="https://docs.google.com/spreadsheets/d/1UCvnHzEMqCTmQdanIkMgTYtSCIpg94lA9oMIiIZS3m4/edit?gid=0#gid=0">읺읺</a>
-    <a class="item" href="https://docs.google.com/spreadsheets/d/1oMUKS2qFX26K4bl9STUuuy3bOLXyd8PJ6JgsVGJDPjs/edit?usp=sharing">재혁</a>
-    <a class="item" href="https://docs.google.com/spreadsheets/d/1_-BbQrFHbbI_J-uYkLkhzmWNBWRJcgxnKr7VIzQ0SoI/edit?gid=0#gid=0">지나가는사람</a>
-    <a class="item" href="https://docs.google.com/spreadsheets/d/1L3NTexknm6yFR2xGDiCxupe8qCdeNBjL2_sMsCplOR8/edit?usp=drivesdk">케로/미송</a>
-    <a class="item" href="https://docs.google.com/spreadsheets/d/1Ek-iU7lyOjE8hFVlx1NMPJFjTMoXw2OOBp--39UtcE4/edit?gid=1186439431#gid=1186439431">moro</a>
-    <a class="item" href="https://example.com/13">Nyxx</a>
-    <a class="item" href="https://docs.google.com/spreadsheets/d/1AyFcoLn800EVrNnFN3HP7QD5VYPYETJeLP3g6BQRCFk/edit?usp=sharing">끼롱곰</a>
+    <a class="item" href="player.html?name=1">bless</a>
+    <a class="item" href="player.html?name=2">라퓨</a>
+    <a class="item" href="player.html?name=3">룩샤</a>
+    <a class="item" href="player.html?name=4">근성객기</a>
+    <a class="item" href="player.html?name=5">두기</a>
+    <a class="item" href="player.html?name=6">로드</a>
+    <a class="item" href="player.html?name=7">심해어</a>
+    <a class="item" href="player.html?name=8">읺읺</a>
+    <a class="item" href="player.html?name=9">재혁</a>
+    <a class="item" href="player.html?name=10">지나가는사람</a>
+    <a class="item" href="player.html?name=11">케로/미송</a>
+    <a class="item" href="player.html?name=12">moro</a>
+    <a class="item" href="player.html?name=13">Nyxx</a>
+    <a class="item" href="player.html?name=14">끼롱곰</a>
   </div>
   
 <script type="module">
@@ -78,6 +78,7 @@ window.db = db; // 다른 script에서 쓰기 위해
 </body>
 update index
 </html>
+
 
 
 
