--- a/index.html
+++ b/index.html
@@ -41,20 +41,20 @@
 
 <body>
   <div class="container">
-    <a class="item" href="player.html?name=1">bless</a>
-    <a class="item" href="player.html?name=2">라퓨</a>
-    <a class="item" href="player.html?name=3">룩샤</a>
-    <a class="item" href="player.html?name=4">근성객기</a>
-    <a class="item" href="player.html?name=5">두기</a>
-    <a class="item" href="player.html?name=6">로드</a>
-    <a class="item" href="player.html?name=7">심해어</a>
-    <a class="item" href="player.html?name=8">읺읺</a>
-    <a class="item" href="player.html?name=9">재혁</a>
-    <a class="item" href="player.html?name=10">지나가는사람</a>
-    <a class="item" href="player.html?name=11">케로/미송</a>
-    <a class="item" href="player.html?name=12">moro</a>
-    <a class="item" href="player.html?name=13">Nyxx</a>
-    <a class="item" href="player.html?name=14">끼롱곰</a>
+    <a class="item" href="player.html?target=1">bless</a>
+    <a class="item" href="player.html?target=2">라퓨</a>
+    <a class="item" href="player.html?target=3">룩샤</a>
+    <a class="item" href="player.html?target=4">근성객기</a>
+    <a class="item" href="player.html?target=5">두기</a>
+    <a class="item" href="player.html?target=6">로드</a>
+    <a class="item" href="player.html?target=7">심해어</a>
+    <a class="item" href="player.html?target=8">읺읺</a>
+    <a class="item" href="player.html?target=9">재혁</a>
+    <a class="item" href="player.html?target=10">지나가는사람</a>
+    <a class="item" href="player.html?target=11">케로/미송</a>
+    <a class="item" href="player.html?target=12">moro</a>
+    <a class="item" href="player.html?target=13">Nyxx</a>
+    <a class="item" href="player.html?target=14">끼롱곰</a>
   </div>
   
 <script type="module">
@@ -78,6 +78,7 @@ window.db = db; // 다른 script에서 쓰기 위해
 </body>
 update index
 </html>
+
 
 
 
