--- a/player.html
+++ b/player.html
@@ -22,32 +22,37 @@ body {
 /* 플로팅 카드 */
 .keyword {
   position: absolute;
-  padding: 10px 18px;
-  border-radius: 20px;
-  background: rgba(255,255,255,0.6);
-  border: 1px solid rgba(0,0,0,0.2);
-  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-  backdrop-filter: blur(4px);
-  font-size: 14px;
+  padding: 14px 26px;
+  border-radius: 999px;
+
+  background: rgba(255,255,255,0.75);
+  border: 1.5px solid rgba(0,0,0,0.15);
+
+  box-shadow:
+    0 6px 18px rgba(0,0,0,0.12),
+    inset 0 0 6px rgba(255,255,255,0.6);
+
+  backdrop-filter: blur(6px);
+
+  font-size: 16px;
+  font-weight: 500;
+  white-space: nowrap;
+
+  transition: transform 0.3s ease;
 }
 
-/* 하단 버튼 영역 */
-.bottom {
-  position: fixed;
-  bottom: 20px;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  padding: 0 40px;
-  box-sizing: border-box;
+.keyword:hover {
+  transform: scale(1.08);
 }
 
 .btn {
-  padding: 12px 18px;
-  border-radius: 12px;
-  background: #eee;
+  padding: 14px 22px;
+  border-radius: 14px;
+  background: #f3f3f3;
   text-decoration: none;
   color: black;
+  font-size: 15px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.08);
 }
 </style>
 </head>
@@ -106,8 +111,8 @@ function showKeywords(list) {
     div.innerText = text;
 
     // 랜덤 위치
-    div.style.left = Math.random() * (w - 100) + "px";
-    div.style.top = Math.random() * (h - 40) + "px";
+   div.style.left = Math.random() * (w - 180) + "px";
+div.style.top = Math.random() * (h - 70) + "px";
 
     cloud.appendChild(div);
   });
