--- a/admin.html
+++ b/admin.html
@@ -89,8 +89,8 @@ th {
    설정
 ===================== */
 
-// 간단 비밀번호 (원하는 값으로 변경)
-const ADMIN_PASSWORD = "lagmei";
+
+const ADMIN_PASSWORD = "lagm";
 
 // 참가자 이름 매핑 (여기 실제 이름으로 바꾸세요)
 const players = {
